--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <body>
     <header>
       <p>Trial</p>
+      <p>Hello</p>
       <img src="img/santa.png" alt="Cartoon Santa waving" />
       <h1>North Pole Online</h1>
       <img src="img/reindeer.png" alt="Cartoon Reindeer waving" />
