--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
       <p>Trial</p>
       <p>Hello</p>
       <p>Nothing to see here!</p>
+      <p>cat</p>
+
       
 
       <img src="img/santa.png" alt="Cartoon Santa waving" />
