--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
     </main>
     <footer>
       <span>&copy; 2021 - COIS 3420 Web Applications</span>
+      <p>Kris D'souza</p>
     </footer>
   </body>
 </html>
