--- a/index.html
+++ b/index.html
@@ -25,7 +25,16 @@
     </header>
 
     <main>
-   
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="list.php">Naughty/Nice List</a></li>
+        <li><a href="map.html">Route Map</a></li>
+        <li><a href="complaint.php">Elf Complaints</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="list.php">Naughty/Nice List</a></li>
+        <li><a href="map.html">Route Map</a></li>
+        <li><a href="complaint.php">Elf Complaints</a></li>
+      </ul>
     </main>
     <footer>
       <ul>
