small changes to nav-bar

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Slot-It</title>
     <link rel="stylesheet" href="styles/master.css"/>
+    <script src="https://kit.fontawesome.com/6ab0b12156.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <header>
@@ -12,14 +13,14 @@
         <ul>
           <div>
             <li>Slot-it[logo]</li>
-            
           </div>
           <div>
           <a href=""><li>Home</li></a>
           <a href=""><li>Create</li></a>
-          <a href=""><li>View</li></a>
-          <a href=""><li>Login</li></a>
-          <a href=""><li>My Account</li></a>
+          
+          <a href="trentu.ca"><li>View</li></a>
+          <a href="login.html"><li>Login<i class="fa fa-sign-in" aria-hidden="true"></i></li></a>
+          <a href="derek.html"><li>My Account<i class="fa fa-user" aria-hidden="true"></i></li></a>
         </div>
         </ul>
       </nav>
