--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </div>
         <div>
           <p> Don't have an account?</p>
-          <button>Log-in</button>
+         <a href=""><button>Sign-up</button></a>
           
         </div>
       <!-- <div>
