--- a/index.html
+++ b/index.html
@@ -47,10 +47,12 @@
     <footer>
       <ul>
         <li><a href="">Home</a></li>
-        <li><a href="scripts/registration.php">Contact</a></li>
+        <li><a href="mailto:slot-it@gmail.com">Contact</a></li>
+        <li><i class="fas fa-phone-square-alt"></i> : +1(705)-123-1234</li>
+        <li>Slot-it[logo]</li>
       </ul>
-      <p>&copy; 2021 - Slot-It</p>
-      <img src= "logo.png" alt='The website logo'/>
+      <p>&copy; 2021 - Slot-It - All rights reserved</p>
+      
     </footer>
   </body>
 </html>
