created the viewing page and added the logo where necessary on other pages

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <nav>
         <ul>
           <div>
-            <img src="img/logo.png" alt="Slot-it logo" width="60px" height="60px">
+            <img src="img/logo.png" alt="Slot-it logo" >
           </div>
           <div>
           <a href=""><li>Home</li></a>
@@ -67,7 +67,7 @@
         <li><a href="">Home</a></li>
         <li><a href="mailto:slot-it@gmail.com">Contact</a></li>
         <li><i class="fas fa-phone-square-alt"></i> : +1(705)-123-1234</li>
-        <li>Slot-it[logo]</li>
+        <li> <img src="img/logo.png" alt="Slot-it logo"></li>
       </ul>
       <p>&copy; 2021 - Slot-It - All rights reserved</p>
       
