edit-account changes and other small changes to main page & reg page

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <nav>
         <ul>
           <div>
-            <img src="img/logo.png" alt="Slot-it logo" width="60px" height="60px">
+            <img src="./img/logo.png" alt="Slot-it logo" width="60px" height="60px">
           </div>
           <div>
           <a href=""><li>Home</li></a>
