--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           </div>
           <div>
           <a href=""><li>Home</li></a>
-          <a href=""><li>Create</li></a>
+          <a href="create.html"><li>Create</li></a>
           
           <a href="trentu.ca"><li>View</li></a>
           <a href="./scripts/login.php"><li>Login<i class="fa fa-sign-in" aria-hidden="true"></i></li></a>
