--- a/create.html
+++ b/create.html
@@ -18,7 +18,7 @@
             <a href=""><li>Home</li></a>
             <a href="create.html"><li>Create</li></a>
             
-            <a href="trentu.ca"><li>View</li></a>
+            <a href="./scripts/mystuff.php"><li>View</li></a>
             <a href="./scripts/login.php"><li>Login<i class="fa fa-sign-in" aria-hidden="true"></i></li></a>
             <a href="derek.html"><li>My Account<i class="fa fa-user" aria-hidden="true"></i></li></a>
           </div>
