added hyperlinks to buttons in view and cancelslot

--- a/cancelslot.html
+++ b/cancelslot.html
@@ -49,8 +49,8 @@
           </table>
           <p>Are you sure you want to continue?</p>
           <div>
-            <button>Yes</button>
-            <button>No</button>
+            <a href="scripts/viewing.php">Yes</a>
+            <a href="viewslot.html">No</a>
           </div>
         </section>
       </main>
