--- a/viewslot.html
+++ b/viewslot.html
@@ -49,8 +49,8 @@
           </table>
 
           <div>
-            <button>Back</button>
-            <button>Cancel</button>
+            <a href="scripts/viewing.php">Back</button>
+            <a href="cancelslot.html">Cancel Slot</button>
           </div>
         </section>
       </main>
