fixed broken hyperlink on home button

--- a/create.html
+++ b/create.html
@@ -15,7 +15,7 @@
         <nav>
           <ul>
             <div>
-            <a href=""><li>Home</li></a>
+            <a href="index.html"><li>Home</li></a>
             <a href="create.html"><li>Create</li></a>
             
             <a href="./scripts/mystuff.php"><li>View</li></a>
