Divided viewing page, changed the links in the nav bar and added "copylink" icon in the table

--- a/index.html
+++ b/index.html
@@ -16,10 +16,9 @@
           </div>
           <div>
           <a href=""><li>Home</li></a>
-          <a href="create.html"><li>Create</li></a>
-          <a href="./scripts/mystuff.php"><li>View</li></a>
+          <a href="./scripts/search.php"><li>Search</li></a>
+          <a href="./scripts/registration.php"><li>Sign-up<i class="fa fa-sign-in" aria-hidden="true"></i></li></a>
           <a href="./scripts/login.php"><li>Login<i class="fa fa-sign-in" aria-hidden="true"></i></li></a>
-          <a href="./scripts/edit_account.php"><li>My Account<i class="fa fa-user" aria-hidden="true"></i></li></a>
         </div>
         </ul>
       </nav>      
@@ -57,7 +56,7 @@
         <div>
           <h1>Is it really free?</h1>
           <p>Yes! Thanks to our remarkable team of unpaid interns, we managed to cut costs down by a whopping 100%! Our outsourced customer service team is always available to help sort out any issues you may have, so don't worry!</p>
-          <button>Contact Us</button>
+          <a href="mailto:slot-it@gmail.com"><button>Contact Us</button></a>
         </div>
 
         
