added links for "try now" on index page

--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
         <div>
           <h1>What is Slot-It?</h1>
           <p>Slot-It is a simple way to create,manage and publish online sign-up sheets. You can create sign-up sheets for people to sign up for, enter times and dates for a set of tasks and activites, and publish/share it.</p>
-          <button>Try Now</button>
+          <a href="./scripts/registration.php"><button>Try Now</button></a>
         </div>
 
         <div>
           <h1>Who is slot-it for?</h1>
           <p>Slot-It is free to use anyone, and everyone. Slot-It can be used for event sign-ups, classes, anything. If you need a sign-up sheet, especially one that's customizable, Slot-it is your friend. Slot-it is free, and always will be. </p>
-          <button>View a sample sign-up sheet</button>
+          <a href="./scripts/search.php"><button>View a sample sign-up sheet</button></a>
         </div>
 
         <div>
